Added queryParams